--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "@angular/common": "^15.0.0",
     "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
-    "@angular/forms": "^15.0.0",
-    "@angular/material": "^15.0.2",
+    "@angular/forms": "^15.0.0",    
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "@azure/msal-angular": "^2.5.1",
+    "primeicons": "^6.0.1",
+    "primeng": "^15.0.0-rc.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
